--- a/registration/index.html
+++ b/registration/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">Beta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Charlie</a>
+                    <a class="nav-link" href="#">Chuck</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Delta</a>
