--- a/registration/index.html
+++ b/registration/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">Beta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Chuck</a>
+                    <a class="nav-link" href="#">Charlie</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Delta</a>
@@ -43,7 +43,7 @@
                     <a href="https://ricoh-member.ping-devops.com" class="btn btn-outline-dark">Member</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://ricoh-distributor.ping-devops.com" class="btn btn-outline-dark ml-2">Distributor</a>
+                    <a href="https://ricoh-dealer.ping-devops.com" class="btn btn-outline-dark ml-2">Dealer</a>
                 </li>
                 <li class="nav-item">
                     <a href="/registration/" class="btn btn-secondary ml-2">Sign Up</a>
@@ -166,7 +166,7 @@
         // sometimes it is helpful to introduce a random nonce to prevent caching
         let nonce = Math.floor(Math.random() * 100000);
         $("a[href='https://ricoh-member.ping-devops.com']").attr('href', 'https://ricoh-member.ping-devops.com?nonce=' + nonce);
-        $("a[href='https://ricoh-distributor.ping-devops.com']").attr('href', 'https://ricoh-distributor.ping-devops.com?nonce=' + nonce);
+        $("a[href='https://ricoh-dealer.ping-devops.com']").attr('href', 'https://ricoh-dealer.ping-devops.com?nonce=' + nonce);
     </script>
 
     <script>
