adding dealer to registration

--- a/registration/index.html
+++ b/registration/index.html
@@ -77,6 +77,12 @@
                     <input type="text" class="form-control" id="inputLastName" required>
                 </div>
             </div>
+            <div class="form-row">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="ricohDealer">
+                    <label class="form-check-label" for="ricohDealer">I am a Ricoh Dealer</label>
+                  </div>
+            </div>
 
             <hr>
 
