--- a/registration/index.html
+++ b/registration/index.html
@@ -79,8 +79,11 @@
             </div>
             <div class="form-row collapse" id='dealerDiv'>
                 <div class="form-group col-md-6">
-                    <label for="inputDealerName">Dealer Name</label>
-                    <input type="text" class="form-control" id="inputDealerName" required>
+                    <label for="inputDealerName">Dealership</label>
+                    <select class="form-control" id="inputDealerName">
+                        <option>1</option>
+                        <option>2</option>
+                    </select>
                 </div>
             </div>
             <div class="form-row">
