--- a/registration/index.html
+++ b/registration/index.html
@@ -81,7 +81,7 @@
                 <div class="form-group col-md-6">
                     <label for="inputDealerDN">Dealership</label>
                     <select class="form-control" id="inputDealerDN">
-                        <option value=''></option>
+                        <option value='' selected></option>
                         <option value='entryUUID=4ab63db4-cb52-458c-9ed5-5daaff5da719,ou=dealers,dc=example,dc=com'>Atlantic Business Products</option>
                         <option value='entryUUID=ca628c72-6e87-4612-95b5-605dd55c3067,ou=dealers,dc=example,dc=com'>Frontier Business Products</option>
                     </select>
