--- a/registration/index.html
+++ b/registration/index.html
@@ -87,7 +87,7 @@
                     </select>
                 </div>
             </div>
-            <div class="form-row">
+            <div class="form-row mt-2 ml-1">
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="ricohDealerCheckbox">
                     <label class="form-check-label" for="ricohDealerCheckbox">I am a Ricoh Dealer</label>
