--- a/registration/index.html
+++ b/registration/index.html
@@ -210,7 +210,7 @@
 
             firstName = $('#inputFirstName').val();
             lastName = $('#inputLastName').val();
-            ricohDealerDN = $('#inputDealerDN').val()}
+            ricohDealerDN = $('#inputDealerDN').val()
 
             var data = {
                 "_parentDN": parentDn,
