--- a/registration/index.html
+++ b/registration/index.html
@@ -214,7 +214,7 @@
 
             var data = {
                 "_parentDN": parentDn,
-                "objectClass": ["inetOrgPerson"],
+                "objectClass": ["ricohPerson"],
                 "givenName": [firstName],
                 "sn": [lastName],
                 "cn": [firstName + " " + lastName],
