--- a/registration/index.html
+++ b/registration/index.html
@@ -188,7 +188,7 @@
     <script>
         let authHeader = 'Y249YWRtaW5pc3RyYXRvcjoyRmVkZXJhdGVNMHJl';
         let pingDirectory = 'ricoh-pingdirectory.ping-devops.com';
-        let parentDn = 'ou=people,dc=example,dc=com';
+        let parentDn = 'ou=persons,dc=example,dc=com';
 
         $(document).ready(function() {
             console.log ('doc ready function');
