--- a/registration/index.html
+++ b/registration/index.html
@@ -227,7 +227,7 @@
                     "sn": [lastName],
                     "cn": [firstName + " " + lastName],
                     "ricohRelatedDealerDN": [ricohDealerDN],
-                    "ds-pwp-account-disabled": [true]
+                    "ds-pwp-account-disabled": true
                 }
             }
 
