--- a/dealer/index.html
+++ b/dealer/index.html
@@ -16,7 +16,7 @@
 
     <!-- navigation -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff;">
-        <a class="navbar-brand mb-1" href="/">
+        <a class="navbar-brand mb-1" href="https://ricoh-www.ping-devops.com">
             <img src="/assets/images/ping-logo.svg" height="50" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
                     <a href="https://ricoh-dealer.ping-devops.com" class="btn btn-outline-dark ml-2">Dealer</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/registration/" class="btn btn-secondary ml-2">Sign Up</a>
+                    <a href="/registration/" class="btn btn-secondary ml-2">Logout</a>
                 </li>
             </ul>
         </div>
