--- a/dealer/index.html
+++ b/dealer/index.html
@@ -53,7 +53,7 @@
     </nav>
     <!-- /navigation -->
 
-    <div class="container-fluid" style="height:575px; background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://www.ricoh-usa.com/-/media/ricoh/common/images/webinars/ioffice/t0-webinar-ioffice.jpg); background-repeat:no-repeat; background-position:center top;">
+    <div class="container-fluid" style="height:575px; background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), background-repeat:no-repeat; background-position:center top;">
         <div class="container" style="padding: 300px 0px">
             <h1 class="display-4 text-white text-right">Something You Know</h1>
             <h1 class="display-4 text-white text-right">Something You Have</h1>
