--- a/member/index.html
+++ b/member/index.html
@@ -50,8 +50,8 @@
     <!-- hero banner -->
     <div class="jumbotron jumbotron-fluid mb-n1">
         <div class="container">
-            <h1 class="display-4">Two great things about your Brand &reg;</h1>
-            <p class="lead">Absolutely. Amazing. Incredible. That's Three.</p>
+            <h1 class="display-4">Member Portal</h1>
+            <p class="lead">Welcome to our member portal.</p>
         </div>
     </div>
     <!-- /hero banner -->
